--- a/src/views/VProyecto.form
+++ b/src/views/VProyecto.form
@@ -684,7 +684,7 @@
 
                       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                       <SubComponents>
-                        <Component class="javax.swing.JTable" name="tbComponente1">
+                        <Component class="javax.swing.JTable" name="tbComponentePuerta">
                           <Properties>
                             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                               <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
